[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "tg-xtask"
publish = false
repository.workspace = true
version = "0.5.11"

[target.'cfg(any(windows, unix))'.dependencies]
anyhow = { workspace = true }
axbuild.workspace = true
tokio = { version = "1.0", features = ["full"] }
