[package]
name = "ax-arm-pl011"
version = "0.3.0"
edition = "2021"
authors = ["Shiping Yuan <robert_yuan@pku.edu.com>", "Yuekai Jia <equation618@gmail.com>"]
description = "ARM Uart pl011 register definitions and basic operations"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/arm_pl011"
documentation = "https://docs.rs/ax-arm-pl011"
keywords = ["arm", "pl011", "uart", "arceos"]
categories = ["embedded", "no-std", "hardware-support", "os"]

[dependencies]
tock-registers = "0.8"
