[package]
name = "ax-arm-pl011"
version = "0.3.6"
repository = "https://github.com/rcore-os/tgoskits"
edition = "2021"
authors = ["Shiping Yuan <robert_yuan@pku.edu.com>", "Yuekai Jia <equation618@gmail.com>"]
description = "ARM Uart pl011 register definitions and basic operations"
keywords = ["arm", "pl011", "uart", "arceos"]
categories = ["embedded", "no-std", "hardware-support", "os"]
license = "Apache-2.0"

[dependencies]
tock-registers = "0.8"
