[package]
name = "ax-arm-pl031"
version = "0.4.5"
repository = "https://github.com/rcore-os/tgoskits"
edition = "2021"
authors = ["Keyang Hu <keyang.hu@qq.com>"]
description = "System Real Time Clock (RTC) Drivers for aarch64 based on PL031."
keywords = ["arceos", "aarch64", "rtc", "pl031"]
categories = ["os", "hardware-support", "no-std"]
license = "Apache-2.0"

[dependencies]
chrono = { version = "0.4.38", default-features = false, optional = true }

[features]
chrono = ["dep:chrono"]
default = ["chrono"]
