[package]
edition = "2024"
name = "arm_vcpu"
version = "0.5.5"
authors = [
  "KeYang Hu <keyang.hu@qq.com>",
  "Mingxian Su <aarkegz@gmail.com>",
  "ShiMei Tang <shimei820@gmail.com>",
  "DeBin Luo <luodeb@outlook.com>",
  "周睿 <zrufo747@outlook.com>",
]
description = "Aarch64 VCPU implementation for Arceos Hypervisor"
repository = "https://github.com/arceos-hypervisor/arm_vcpu"
categories = ["embedded", "no-std"]
keywords = ["hypervisor", "aarch64", "vcpu"]
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ["aarch64-unknown-none-softfloat"]

[dependencies]
log = "0.4"
spin = "0.10"

aarch64-cpu = "11.0"
numeric-enum-macro = "0.2"

ax-errno = "0.4"
ax-percpu = { version = "0.4", features = ["arm-el2"] }

axaddrspace = "0.5"
axdevice_base = "0.4"
axvcpu = "0.5"
axvisor_api = "0.5"
