[package]
version = "0.4.2"
authors = [
  "Mingxian Su <aarkegz@gmail.com>",
  "DeBin Luo <luodeb@outlook.com>",
]
categories = ["os", "no-std"]
edition = "2021"
keywords = ["hypervisor", "kernel", "vgic"]
license = "Apache-2.0"
name = "arm_vgic"
repository = "https://github.com/arceos-hypervisor/arm_vgic"
description = "ARM Virtual Generic Interrupt Controller (VGIC) implementation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ["aarch64-unknown-none-softfloat"]

[features]
default = []
vgicv3 = []

[dependencies]
axaddrspace = "0.5.0"
axdevice_base = "0.4.2"
axvisor_api = "0.5.0"

aarch64-cpu = "11.0"
aarch64_sysreg = "0.3.1"
ax-errno = "0.4.2"
bitmaps = {version = "3.2", default-features = false}
log = "0.4"
ax-memory-addr = "0.6.1"
spin = "0.10"
tock-registers = "0.10"
