[package]
authors = [
  "KeYang Hu <keyang.hu@qq.com>",
  "Mingxian Su <aarkegz@gmail.com>",
  "DeBin Luo <luodeb@outlook.com>",
]
categories = ["embedded", "no-std"]
description = "ArceOS-Hypervisor guest address space management module"
edition = "2024"
keywords = ["hypervisor", "address-space"]
license = "Apache-2.0"
name = "axaddrspace"
repository = "https://github.com/arceos-hypervisor/axaddrspace"
version = "0.5.0"

[features]
arm-el2 = ["page_table_entry/arm-el2"]
default = ["arm-el2"]

[dependencies]
bit_field = "0.10"
bitflags = "2.9"
cfg-if = "1.0"
lazyinit = "0.4.2"
log = "0.4"
numeric-enum-macro = "0.2"

# Operating system independent modules provided by ArceOS.
ax-errno = "0.4.2"
memory_addr = "0.6.1"
ax-memory-set = "0.6.1"
page_table_entry = "0.8.1"
page_table_multiarch = "0.8.1"

[target.'cfg(any(target_arch = "x86_64", doc))'.dependencies]
x86 = "0.52"

[dev-dependencies]
lazy_static = "1.5"
spin = "0.10"
assert_matches = "1.5.0"
axin = "0.1.0"
