[package]
name = "axbacktrace"
version = "0.3.8"
description = "Backtrace for ArceOS"
authors = ["Mivik <mivikq@gmail.com>", "朝倉水希 <asakuramizu111@gmail.com>"]
repository = "https://github.com/Starry-OS/axbacktrace"
edition = "2024"
keywords = ["DWARF", "debug", "backtrace", "unwinding"]
categories = ["development-tools::debugging"]
license = "Apache-2.0"

[features]
alloc = []
dwarf = ["dep:addr2line", "dep:gimli", "dep:paste", "alloc"]

[dependencies]
cfg-if = "1"
log = "0.4"
spin = { version = "0.10", default-features = false, features = ["once"] }

addr2line = { version = "0.26", default-features = false, optional = true, features = [
    "cpp_demangle",
    "rustc-demangle",
] }
gimli = { version = "0.33", default-features = false, optional = true, features = [
    "read-core",
    "endian-reader",
] }
paste = { version = "1", optional = true }
