[workspace]
resolver = "2"

members = [
    "axconfig-gen",
    "axconfig-macros",
]

[workspace.package]
version = "0.4.6"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
repository = "https://github.com/rcore-os/tgoskits"
keywords = ["arceos", "config", "toml"]
rust-version = "1.76"
license = "Apache-2.0"
