[package]
name = "axdevice"
version = "0.4.7"
description = "A reusable, OS-agnostic device abstraction layer designed for virtual machines."
homepage = "https://github.com/arceos-hypervisor/axdevice"
repository = "https://github.com/arceos-hypervisor/axdevice"
keywords = ["hypervisor"]
authors = ["Su Mingxian <aarkegz@gmail.com>"]
documentation = "https://docs.rs/axdevice"
categories = ["virtualization"]
edition = "2024"
readme = "README.md"
license = "Apache-2.0"

[features]

[dependencies]
log = "0.4"
cfg-if = "1.0"
spin = "0.10"

# System independent crates provided by ArceOS.
ax-errno = "0.4"
ax-memory-addr = "0.6"

axvmconfig = { version = "0.4", default-features = false }
axaddrspace = "0.5"
axdevice_base = "0.4"
range-alloc-arceos = "0.3"

[target.'cfg(target_arch = "aarch64")'.dependencies]
arm_vgic = { version = "0.4", features = ["vgicv3"] }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv_vplic = "0.4"
