[package]
name = "axdevice_base"
version = "0.2.2"
edition = "2024"
authors = ["Hui Xiao <1127751018@qq.com>"]
description = "Basic traits and structures for emulated devices in ArceOS hypervisor."
documentation = "https://docs.rs/axdevice_base"
repository = "https://github.com/arceos-hypervisor/axdevice_base"
readme = "README.md"
license = "Apache-2.0"
keywords = ["arceos", "hypervisor", "virtualization", "device", "no-std"]
categories = ["no-std", "virtualization"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

# ArceOS and AxVisor crates.
axaddrspace = "0.3"
axerrno = "0.2"
axvmconfig = {version = "0.2", default-features = false}

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "riscv64gc-unknown-none-elf", "aarch64-unknown-none-softfloat"]
