[workspace]
resolver = "2"

members = [
    "axdriver_base",
    "axdriver_block",
    "axdriver_net",
    "axdriver_display",
    "axdriver_pci",
    "axdriver_virtio",
    "axdriver_input",
    "axdriver_vsock",
]

[workspace.package]
version = "0.3.10"
edition = "2021"
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "朝倉水希 <asakuramizu111@gmail.com>",
    "Yu Chen <yuchen@tsinghua.edu.cn>"
]
repository = "https://github.com/rcore-os/tgoskits"
categories = ["os", "no-std", "hardware-support"]
license = "Apache-2.0"

[workspace.dependencies]
ax-driver-base = { path = "axdriver_base", version = "0.3" }
ax-driver-block = { path = "axdriver_block", version = "0.3" }
ax-driver-display = { path = "axdriver_display", version = "0.3" }
ax-driver-input = { path = "axdriver_input", version = "0.3" }
ax-driver-net = { path = "axdriver_net", version = "0.3" }
ax-driver-pci = { path = "axdriver_pci", version = "0.3" }
ax-driver-virtio = { path = "axdriver_virtio", version = "0.3" }
ax-driver-vsock = { path = "axdriver_vsock", version = "0.3" }
log = "0.4"

# For local dev and dry-run: use local crates until published to crates.io
[patch.crates-io]
ax-driver-base = { path = "axdriver_base" }
ax-driver-block = { path = "axdriver_block" }
ax-driver-display = { path = "axdriver_display" }
ax-driver-net = { path = "axdriver_net" }
ax-driver-virtio = { path = "axdriver_virtio" }
ax-driver-input = { path = "axdriver_input" }
ax-driver-vsock = { path = "axdriver_vsock" }
