[package]
name = "ax-errno"
version = "0.4.7"
repository = "https://github.com/rcore-os/tgoskits"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Generic error code representation."
keywords = ["arceos", "errno"]
categories = ["no-std", "os"]
license = "Apache-2.0"

[dependencies]
log = "0.4"
strum = { version = "0.27.2", default-features = false, features = ["derive"] }
