[package]
name = "axfs-ng-vfs"
version = "0.3.1"
edition = "2024"
authors = ["Mivik <mivikq@gmail.com>", "朝倉水希 <asakuramizu111@gmail.com>"]
description = "Virtual filesystem layer for ArceOS"
keywords = ["vfs", "filesystem", "ax-fs-ng", "arceos"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Starry-OS/axfs-ng-vfs"

[dependencies]
ax-errno = "0.4.2"
axpoll = "0.3.2"
bitflags = "2.10"
cfg-if = "1"
hashbrown = "0.16"
inherit-methods-macro = "0.1"
log = "0.4"
smallvec = "1.15"
spin = { version = "0.10", default-features = false, features = ["mutex"] }
