[package]
name = "axfs-ng-vfs"
version = "0.3.7"
edition = "2024"
authors = ["Mivik <mivikq@gmail.com>", "朝倉水希 <asakuramizu111@gmail.com>"]
description = "Virtual filesystem layer for ArceOS"
keywords = ["vfs", "filesystem", "ax-fs-ng", "arceos"]
repository = "https://github.com/Starry-OS/axfs-ng-vfs"
license = "Apache-2.0"

[dependencies]
ax-errno = "0.4"
axpoll = "0.3"
bitflags = "2.10"
cfg-if = "1"
hashbrown = "0.16"
inherit-methods-macro = "0.1"
log = "0.4"
smallvec = "1.15"
spin = { version = "0.10", default-features = false, features = ["mutex"] }
