[workspace]
resolver = "2"

members = [
    "axfs_vfs",
    "ax-fs-devfs",
    "ax-fs-ramfs",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
repository = "https://github.com/rcore-os/tgoskits"
categories = ["os", "no-std", "filesystem"]
license = "Apache-2.0"

[workspace.dependencies]
ax-fs-vfs = { path = "axfs_vfs", version = "0.3.2" }
