[package]
name = "axhvc"
version = "0.4.0"
edition = "2024"
authors = ["AxVisor Team"]
description = "AxVisor HyperCall definitions for guest-hypervisor communication"
documentation = "https://docs.rs/axhvc"
repository = "https://github.com/arceos-hypervisor/axhvc"
readme = "README.md"
license = "Apache-2.0"
keywords = ["hypervisor", "hypercall", "virtualization", "arceos", "axvisor"]
categories = ["no-std", "embedded", "os"]

[dependencies]
# Error types for ArceOS ecosystem
ax-errno = "0.4.2"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "x86_64-unknown-none", "riscv64gc-unknown-none-elf", "aarch64-unknown-none-softfloat"]
