[package]
name = "ax-io"
version = "0.5.4"
repository = "https://github.com/rcore-os/tgoskits"
edition = "2024"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "`std::io` for `no_std` environment"
keywords = ["arceos", "io", "no-std"]
categories = ["no-std"]
license = "Apache-2.0"

[features]
alloc = []
default = []

[dependencies]
ax-errno = "0.4"
heapless = "0.9"
memchr = { version = "2", default-features = false }

[build-dependencies]
autocfg = "1"
