[workspace]
resolver = "2"

members = ["memory_addr", "memory_set"]

[workspace.package]
version = "0.6.6"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>", "aarkegz <aarkegz@gmail.com>"]
# documentation = "let member have their own documentation links"
repository = "https://github.com/rcore-os/tgoskits"
# keywords = ["let member have their own keywords"]
categories = ["os", "memory-management", "no-std"]
rust-version = "1.70.0"
license = "Apache-2.0"
