[workspace]
resolver = "2"

members = [
    "axplat",
    "axplat-macros",
    "cargo-axplat",

    "platforms/axplat-x86-pc",
    "platforms/axplat-aarch64-peripherals",
    "platforms/axplat-aarch64-qemu-virt",
    "platforms/axplat-aarch64-raspi",
    "platforms/axplat-aarch64-bsta1000b",
    "platforms/axplat-aarch64-phytium-pi",
    "platforms/axplat-riscv64-qemu-virt",
    "platforms/axplat-loongarch64-qemu-virt",

    "examples/hello-kernel",
    "examples/irq-kernel",
    "examples/smp-kernel",
]
default-members = [
    "axplat",

    "platforms/axplat-x86-pc",
    "platforms/axplat-aarch64-peripherals",
    "platforms/axplat-aarch64-qemu-virt",
    "platforms/axplat-aarch64-raspi",
    "platforms/axplat-aarch64-bsta1000b",
    "platforms/axplat-aarch64-phytium-pi",
    "platforms/axplat-riscv64-qemu-virt",
    "platforms/axplat-loongarch64-qemu-virt",
]

[workspace.package]
version = "0.5.6"
edition = "2024"
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "Youjie Zheng <Azure_stars@126.com>",
    "yanjuguang <coolyanjg@163.com>",
    "Su Mingxian <aarkegz@gmail.com>",
    "RobertYuan <634954435@qq.com>",
    "hky1999 <keyang.hu@qq.com>",
]
repository = "https://github.com/rcore-os/tgoskits"
license = "Apache-2.0"

[workspace.dependencies]
ax-cpu = "0.5"
ax-plat = { version = "0.5", path = "./axplat" }
ax-plat-macros = { version = "0.3", path = "./axplat-macros" }
ax-plat-aarch64-peripherals = { version = "0.5", path = "platforms/axplat-aarch64-peripherals" }
ax-percpu = "0.4"
