[package]
name = "axpoll"
version = "0.3.8"
edition = "2024"
description = "A library for polling I/O events and waking up tasks."
authors = ["Mivik <mivikq@gmail.com>", "朝倉水希 <asakuramizu111@gmail.com>"]
repository = "https://github.com/Starry-OS/axpoll"
documentation = "https://docs.rs/axpoll"
license = "Apache-2.0"

[features]
alloc = []          # Deprecated
default = ["alloc"]

[dependencies]
bitflags = { version = "2.10", default-features = false }
linux-raw-sys = { version = "0.12", default-features = false, features = [
    "no_std",
    "general",
] }
spin = { version = "0.10", default-features = false, features = [
    "lazy",
    "spin_mutex",
] }

[dev-dependencies]
tokio = { version = "1.37", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
] }
futures = "0.3"
